--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
         <footer id="footer">
             <ul>
                 <li><a href="#">Home</a></li>
-                <li><a href="http://tmlife.net">About</a></li>
+                <li><a href="https://github.com/phi1618/less-template">About</a></li>
                 <li><a href="http://tmlife.net">Blog</a></li>
             </ul>
         </footer>
