create liquid design template.

--- a/index.html
+++ b/index.html
@@ -15,25 +15,39 @@
         </header>
         <div id="contents">
             <section id="main">
-                <h1>Main Contents</h1>
-                <p>
-                    Text Text Text Text Text Text Text Text
-                    Text Text Text Text Text Text Text Text
-                    Text Text Text Text Text Text Text Text
-                    Text Text Text Text Text Text Text Text
-                </p>
-                <p>
-                    Text Text Text Text Text Text Text Text
-                    Text Text Text Text Text Text Text Text
-                    Text Text Text Text Text Text Text Text
-                    Text Text Text Text Text Text Text Text
-                </p>
-                <p>
-                    Text Text Text Text Text Text Text Text
-                    Text Text Text Text Text Text Text Text
-                    Text Text Text Text Text Text Text Text
-                    Text Text Text Text Text Text Text Text
-                </p>
+                <div class="inner">
+                    <h1>Main Contents</h1>
+                    <p>
+                        Text Text Text Text Text Text Text Text
+                        Text Text Text Text Text Text Text Text
+                        Text Text Text Text Text Text Text Text
+                        Text Text Text Text Text Text Text Text
+                        Text Text Text Text Text Text Text Text
+                        Text Text Text Text Text Text Text Text
+                        Text Text Text Text Text Text Text Text
+                        Text Text Text Text Text Text Text Text
+                    </p>
+                    <p>
+                        Text Text Text Text Text Text Text Text
+                        Text Text Text Text Text Text Text Text
+                        Text Text Text Text Text Text Text Text
+                        Text Text Text Text Text Text Text Text
+                        Text Text Text Text Text Text Text Text
+                        Text Text Text Text Text Text Text Text
+                        Text Text Text Text Text Text Text Text
+                        Text Text Text Text Text Text Text Text
+                    </p>
+                    <p>
+                        Text Text Text Text Text Text Text Text
+                        Text Text Text Text Text Text Text Text
+                        Text Text Text Text Text Text Text Text
+                        Text Text Text Text Text Text Text Text
+                        Text Text Text Text Text Text Text Text
+                        Text Text Text Text Text Text Text Text
+                        Text Text Text Text Text Text Text Text
+                        Text Text Text Text Text Text Text Text
+                    </p>
+                </div>
             </section>
             <aside id="side">
                 <h1>Side Contents</h1>
